# portfolio-allocation-analysis.py

./: .gitignore  README.md  pyproject.toml
data/: sample_returns.csv
notebooks/: 01_quick_demo.ipynb
portfolio_allocation/: __init__.py  cli.py
portfolio_allocation/core/: mean_variance.py  plotting.py  risk.py
tests/: test_mean_variance.py  test_risk.py
